--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /*  your css code here. If applicable */
+#line{
+	background:black;
+	width:200px;
+	height:2px;
+	transform-origin:1/2 1/2;
+	position:absolute;
+	left:300px;
+	top:300px;
+}
+
